--- a/Styles/style.scss
+++ b/Styles/style.scss
@@ -1,3 +1,5 @@
 @import "./Components/setting";
 @import "./Components/header";
-@import "./Components/nav"
+@import "./Components/nav";
+@import "./Components/main";
+@import "./Components/footer";
