--- a/Styles/Components/_setting.scss
+++ b/Styles/Components/_setting.scss
@@ -15,26 +15,38 @@ $font-2: "font-2", serif;
 $color-1: white;
 $color-2: black;
 
-body { 
-  background: url(/Styles/assets/images/bg.jpg) no-repeat 
-    center center fixed; 
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
-  background-size: cover;
-  font-family: "font-1";
-}
-
 * {
-  padding: 0;
   margin: 0;
+  padding: 0;
   box-sizing: border-box;
 }
 
-li { 
+li {
   list-style: none;
 }
 
-a { 
-  text-decoration: none;
+body { 
+  background: url(/Styles/assets/images/bg.jpg)  center fixed ; 
+  font-family: "font-1";
+  min-height: 100vh;
+  text-align: center;
+ 
+  &:before {
+    content: "";
+    position: absolute;
+    height: 100%;
+    width: 100%;
+    top: 0;
+    left: 0;
+    background: #1e252d;
+    animation: animBefore 1.5s ease forwards;
+    animation-delay: 0.3s;
+
+    @keyframes animBefore {
+      to {
+        opacity: 0;
+      }
+    }
+  }
+
 }
