--- a/Styles/style.css
+++ b/Styles/style.css
@@ -8,15 +8,9 @@
   src: url(/Styles/assets/Font/Merriweather/Merriweather-Bold.ttf);
 }
 
-body {
-  background: url(/Styles/assets/images/bg.jpg) no-repeat center center fixed;
-  background-size: cover;
-  font-family: "font-1";
-}
-
 * {
-  padding: 0;
   margin: 0;
+  padding: 0;
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
 }
@@ -25,37 +19,197 @@ li {
   list-style: none;
 }
 
-a {
-  text-decoration: none;
-}
-
-.mountain {
-  text-align: center;
-  margin-top: 90px;
-  -ms-flex-line-pack: center;
-      align-content: center;
-}
-
-.mountain h1 {
-  font-family: "font-2";
-  font-size: 4rem;
-  font-weight: bolder;
-  letter-spacing: 5px;
-  text-align: center;
-  color: white;
-}
-
-.mountain p {
+body {
+  background: url(/Styles/assets/images/bg.jpg) center fixed;
   font-family: "font-1";
-  font-size: 0.8rem;
-  letter-spacing: 2px;
-  text-align: center;
-  color: white;
-  margin-top: 40px;
+  min-height: 100vh;
   text-align: center;
 }
 
-.mountain .arrow {
+body:before {
+  content: "";
+  position: absolute;
+  height: 100%;
+  width: 100%;
+  top: 0;
+  left: 0;
+  background: #1e252d;
+  -webkit-animation: animBefore 1.5s ease forwards;
+          animation: animBefore 1.5s ease forwards;
+  -webkit-animation-delay: 0.3s;
+          animation-delay: 0.3s;
+}
+
+@-webkit-keyframes animBefore {
+  to {
+    opacity: 0;
+  }
+}
+
+@keyframes animBefore {
+  to {
+    opacity: 0;
+  }
+}
+
+header {
+  min-height: 100vh;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-transform: translateY(20px);
+          transform: translateY(20px);
+  opacity: 0;
+  -webkit-animation: headerAnim 1.5s forwards;
+          animation: headerAnim 1.5s forwards;
+}
+
+@-webkit-keyframes headerAnim {
+  100% {
+    -webkit-transform: translateY(-40px);
+            transform: translateY(-40px);
+    opacity: 1;
+  }
+}
+
+@keyframes headerAnim {
+  100% {
+    -webkit-transform: translateY(-40px);
+            transform: translateY(-40px);
+    opacity: 1;
+  }
+}
+
+header h1 {
+  text-transform: uppercase;
+  font-size: 4rem;
+  font-weight: 800;
+}
+
+header p {
+  margin: 40px auto 60px;
+  width: 85%;
+  font-style: italic;
+}
+
+header span {
+  -webkit-transform: rotate(90deg);
+          transform: rotate(90deg);
+  border: 1px solid white;
+  border-radius: 150px;
+  height: 60px;
+  width: 60px;
+  font-size: 2rem;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.nav {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+main {
+  width: 85%;
+  margin: -65px auto 30px;
+}
+
+main nav {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  background: rgba(255, 255, 255, 0.15);
+  height: 65px;
+  z-index: 100;
+  position: relative;
+}
+
+main nav ul {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+main nav ul.nav-left {
+  text-transform: uppercase;
+  font-weight: 600;
+}
+
+main nav ul.nav-left:hover li:not(:hover) {
+  background: none;
+  color: white;
+}
+
+main nav ul.nav-left li {
+  padding: 0 15px;
+  height: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  cursor: pointer;
+  -webkit-transition: 0.2s;
+  transition: 0.2s;
+  color: white;
+}
+
+main nav ul.nav-left li:first-child {
+  background: white;
+  color: black;
+}
+
+main nav ul.nav-left li:hover {
+  background: white;
+  color: black;
+}
+
+main nav ul.nav-right {
+  font-size: 1.3rem;
+  min-width: 100px;
+  width: 25%;
+  max-width: 300px;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+  font-weight: bold;
+}
+
+main .section-1 {
+  background: white;
+  min-height: 600px;
+  padding-top: 100px;
+  padding-bottom: 100px;
+}
+
+main .section-1 .top-section-1 {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -63,80 +217,185 @@ a {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  height: 20px;
-  -webkit-transform: rotate(90deg);
-          transform: rotate(90deg);
-  margin: 20px auto;
-  border: 1px solid #d1d1d1;
-  border-radius: 150px;
-  width: 50px;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+main .section-1 .top-section-1 span {
+  padding-bottom: 50px;
+  font-family: "font-1", sans-serif;
+}
+
+main .section-1 .top-section-1 h2 {
+  font-family: "font-2", serif;
+  font-size: 3rem;
+  font-weight: 700;
+  letter-spacing: 2px;
+  padding-bottom: 30px;
+}
+
+main .section-1 .top-section-1 p {
+  font-style: italic;
+  font-family: "font-1", sans-serif;
+  line-height: 30px;
+  padding-bottom: 60px;
+}
+
+main .section-1 .top-section-1 img {
+  margin: 0 auto;
+  width: 85%;
+  padding-bottom: 50px;
+}
+
+main .section-1 .top-section-1 .btn-1 {
   height: 50px;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  margin: 0 auto;
+  padding-left: 40px;
+  padding-right: 40px;
+  border: 2px solid black;
+  background: none;
+  font-size: 1rem;
+  font-family: "font-2", serif;
+  font-weight: 700;
+  letter-spacing: 2px;
 }
 
-nav {
+main .bot-section-1 {
+  margin: 0 auto;
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: 50% 50%;
+      grid-template-columns: 50% 50%;
+  padding-bottom: 80px;
+}
+
+main .bot-section-1 .bl-section-1 {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: horizontal;
+  -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
-      -ms-flex-direction: row;
-          flex-direction: row;
+      -ms-flex-direction: column;
+          flex-direction: column;
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  margin-top: 130px;
-  margin-left: 40px;
-  margin-right: 40px;
+  width: 100%;
 }
 
-nav .left-nav {
+main .bot-section-1 .bl-section-1 span {
+  padding-bottom: 50px;
+  font-family: "font-1", sans-serif;
+}
+
+main .bot-section-1 .bl-section-1 h3 {
+  font-family: "font-2", serif;
+  font-size: 2rem;
+  font-weight: 800;
+  letter-spacing: 1px;
+  padding-bottom: 30px;
+}
+
+main .bot-section-1 .bl-section-1 .img-section-2-left {
+  width: 100%;
+  padding-top: 20px;
+  padding-bottom: 40px;
+}
+
+main .bot-section-1 .bl-section-1 p {
+  font-style: italic;
+  font-family: "font-1", sans-serif;
+  line-height: 30px;
+  padding-left: 80px;
+  padding-right: 80px;
+  padding-bottom: 40px;
+}
+
+main .bot-section-1 .bl-section-1 .btn-1 {
+  height: 50px;
+  margin: 0 auto;
+  padding-left: 40px;
+  padding-right: 40px;
+  border: 2px solid black;
+  background: none;
+  font-size: 1rem;
+  font-family: "font-2", serif;
+  font-weight: 700;
+  letter-spacing: 2px;
+}
+
+main .bot-section-1 .br-section-1 {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  width: 100%;
 }
 
-nav .left-nav li {
-  font-family: "font-1";
-  font-size: 0.8rem;
+main .bot-section-1 .br-section-1 span {
+  padding-bottom: 50px;
+  font-family: "font-1", sans-serif;
 }
 
-nav .right-nav {
+main .bot-section-1 .br-section-1 h3 {
+  font-family: "font-2", serif;
+  font-size: 2rem;
+  font-weight: 800;
+  letter-spacing: 1px;
+  padding-bottom: 30px;
+}
+
+main .bot-section-1 .br-section-1 .img-section-2-right {
+  padding-top: 20px;
+  padding-bottom: 40px;
+}
+
+main .bot-section-1 .br-section-1 p {
+  font-style: italic;
+  font-family: "font-1", sans-serif;
+  line-height: 30px;
+  padding-left: 80px;
+  padding-right: 80px;
+  padding-bottom: 40px;
+}
+
+main .bot-section-1 .br-section-1 .btn-1 {
+  height: 50px;
+  margin: 0 auto;
+  padding-left: 40px;
+  padding-right: 40px;
+  border: 2px solid black;
+  background: none;
+  font-size: 1rem;
+  font-family: "font-2", serif;
+  font-weight: 700;
+  letter-spacing: 2px;
+}
+
+footer {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: 50% 50%;
+      grid-template-columns: 50% 50%;
+  -ms-grid-rows: 1fr 1fr 1fr 1fr;
+      grid-template-rows: 1fr 1fr 1fr 1fr;
+}
+
+footer .grid {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-}
-
-nav .left-nav li {
-  font-family: "font-1";
-  font-size: 0.8rem;
-  padding: 10 0;
-}
-
-.nav {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
