--- a/Styles/Components/_setting.scss
+++ b/Styles/Components/_setting.scss
@@ -1,4 +1,3 @@
-
 @font-face {
   font-family: "font-1";
   src: url(/Styles/assets/Font/Merriweather/Merriweather-Regular.ttf);}
@@ -26,7 +25,7 @@ li {
 }
 
 body { 
-  background: url(/Styles/assets/images/bg.jpg)  center fixed ; 
+  background: url(../assets/images/pic03.jpg)  center fixed ; 
   font-family: "font-1";
   min-height: 100vh;
   text-align: center;
