--- a/Styles/Components/_footer.scss
+++ b/Styles/Components/_footer.scss
@@ -1,11 +1,114 @@
-footer { 
-
+footer {
+  background: rgb(233, 233, 233);
+  min-height: 640px;
+  width: 85%;
+  max-width: 1200px;
+  margin: 30px auto;
   display: grid;
   grid-template-columns: 50% 50%;
-  grid-template-rows: 1fr 1fr 1fr 1fr ;
 
-  .grid {
-    display: flex;
-flex-direction: column; 
-justify-content: center; }
-}
+  @media screen and (max-width: 890px) {
+    grid-template-columns: 1fr;
+  }
+
+  form {
+    display: grid;
+    grid-template-rows: 18px 45px 18px 45px 18px 200px 1fr;
+    gap: 18px;
+    padding: 60px 50px;
+    text-transform: uppercase;
+
+    label {
+      font-size: 0.7rem;
+      font-family: "$font-1";
+      letter-spacing: 1px;
+      font-weight: 800;
+      display: flex;
+      align-items: flex-end;
+    }
+    input[type="text"],
+    textarea {
+      background: none;
+      border: 1px solid rgb(209, 209, 209);
+    }
+    .submit-container {
+      display: flex;
+      align-items: flex-end;
+
+      input[type="submit"] 
+      {
+        background: none;
+        border: 2px solid black;
+        height: 45px;
+        width: 180px;
+        text-transform: uppercase;
+        cursor: pointer;
+        font-family: "$font-1";
+        
+
+      &:hover {
+        
+          border: 1px solid skyblue;
+          color: skyblue;
+          transform: scale(1.2);
+          transition: 0.2s;
+          cursor: pointer;
+        }
+      }
+      }
+    }
+  }
+  .infos-contact {
+    border-left: 1px solid rgb(209, 209, 209);
+    display: grid;
+    grid-template-rows: repeat(4, 1fr);
+
+    div {
+      border-top: 1px solid rgb(209, 209, 209);
+      display: grid;
+      grid-template-columns: 30% 70%;
+      align-items: center;
+
+      h3 {
+        text-transform: uppercase;
+        font-size: 0.7rem;
+        padding-left: 60px;
+        font-family: "$font-1";
+
+        @media screen and (max-width: 550px) {
+
+          font-size: 0.7rem;
+          padding-left: 30px;
+          }
+      
+    
+      }
+      p {
+        font-size: 0.8rem;
+        line-height: 26px;
+        color: rgb(138, 138, 138);
+        font-family: "$font-1";
+      }
+    }
+    .social {
+      
+      ul {
+        display: flex;
+        justify-content: center;
+
+        li {
+          border: 1px solid rgb(209, 209, 209);
+          font-size: 1.5rem;
+          border-radius: 150px;
+          height: 40px;
+          width: 40px;
+          margin-right: 12px;
+          display: flex;
+          justify-content: center;
+          align-items: center;
+
+         
+        }
+      }
+    }
+  }
