--- a/Styles/Components/_header.scss
+++ b/Styles/Components/_header.scss
@@ -8,6 +8,12 @@ header {
   opacity: 0;
   animation: headerAnim 1.5s forwards;
 
+  @media screen and (max-width: 890px) {
+    margin-top: 100px;
+    min-height: 40vh;
+   
+   }
+
   @keyframes headerAnim {
     100% {
       transform: translateY(-40px);
@@ -19,12 +25,24 @@ header {
     text-transform: uppercase;
     font-size: 4rem;
     font-weight: 800;
+
+    @media screen and (max-width: 600px) {
+     font-size: 3rem;
+     }
+
+     @media screen and (max-width: 450px) {
+      font-size: 2rem;
+      }
   }
   p {
     margin: 40px auto 60px;
     width: 85%;
+
     font-style: italic;
-  }
+    @media screen and (max-width: 450px) {
+      font-size: 0.8rem;
+      }
+    }
   span {
     transform: rotate(90deg);
     border: 1px solid white;
@@ -35,5 +53,11 @@ header {
     display: flex;
     align-items: center;
     justify-content: center;
+    cursor: pointer;
+
+    &:hover { 
+      
+      transform: rotate(90deg)
+    }
   }
 }
