--- a/Styles/Components/_main.scss
+++ b/Styles/Components/_main.scss
@@ -1,9 +1,10 @@
 
+
 main {
   width: 85%;
   margin: -65px auto 30px;
- 
 
+  
   nav {
     display: flex;
     justify-content: space-between;
@@ -12,6 +13,10 @@ main {
     z-index: 100;
     position: relative;
 
+    @media screen and (max-width: 890px) {
+     display: none;
+    
+    }
     ul {
       display: flex;
       align-items: center;
@@ -19,12 +24,17 @@ main {
       &.nav-left {
         text-transform: uppercase;
         font-weight: 600;
+        font-size: 0.8rem;
+        letter-spacing: 1px;
 
         &:hover li:not(:hover) {
           background: none;
           color: white;
-        }
 
+          a {
+            color: white;
+          }
+        }
         li {
           padding: 0 15px;
           height: 100%;
@@ -33,13 +43,15 @@ main {
           cursor: pointer;
           transition: 0.2s;
           color: white;
+          
+
 
           &:first-child {
             background: white;
-            color: black;
+            
           }
 
-          &:hover {
+          &:hover  {
             background: white;
             color: black;
           }
@@ -59,41 +71,81 @@ main {
     background: white;
     min-height: 600px;
     padding-top: 100px;
-    padding-bottom: 100px;
-   
+    margin: 0 auto;
   
    
+  
   .top-section-1 {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    
+    position: relative;
+ 
+  
     span{ 
       padding-bottom: 50px;
-      font-family: $font-1;
-    }
+      font-family: "$font-1";
+
+      &::before{
+        content: "";
+        border: 1px solid rgb(209, 209, 209);
+        position: absolute;
+        width: 30%;
+        left: 60%;
+        top: 7%;
+    }      
+    &::after{
+      content: "";
+      border: 1px solid black;
+      position: absolute;
+      width: 30%;
+      left: 10%;
+      top: 7%; } }
+
 
     h2 { 
-      font-family: $font-2;
+      font-family: "$font-2";
       font-size: 3rem;
       font-weight: 700;
       letter-spacing: 2px;
       padding-bottom: 30px;
+
+      @media screen and (max-width: 710px) {
+        font-size: 2rem;
+        }
+
+        @media screen and (max-width: 490px) {
+          font-size: 1.5rem;
+          }
+
+          @media screen and (max-width: 390px) {
+            font-size: 1.2rem;
+            }
     }
 
     p { 
-      font-style: italic;
-      font-family: $font-1;
+      font-family: "$font-1";
       line-height: 30px;
       padding-bottom: 60px;
-    }
+      font-style: italic;
 
+      @media screen and (max-width: 750px) {
+        font-size: 0.9rem;
+    
+        }
+        @media screen and (max-width: 550px) {
+          font-size: 0.8rem;
+        
+    }
+  }
     img { 
       margin: 0 auto;
       width: 85%;
       padding-bottom: 50px;
+      
     }
       .btn-1 { 
+      
         height: 50px;
         margin: 0 auto;
         padding-left: 40px;
@@ -101,55 +153,89 @@ main {
         border: 2px solid black;
         background: none;
         font-size: 1rem;
-        font-family: $font-2;
+        font-family: "$font-2";
         font-weight: 700;
         letter-spacing: 2px;
-      }
-    
+        cursor: pointer;
+
+        &:hover {
+          border: 1px solid skyblue;
+          color: skyblue;
+          transform: scale(1.2);
+          transition: 0.2s;
+        }
   }
     
-      }
-
+     
+    }
     .bot-section-1  
     { 
-      margin: 0 auto;
+      margin-top: 100px;
       display: grid;
-      grid-template-columns: 50% 50%;
-      padding-bottom: 80px;
+      grid-template-columns:50% 50%;
+      border-top: 1px solid rgb(209, 209, 209);
+      width: 100%;
+
+     
+      @media screen and (max-width: 890px) {
+        grid-template-columns: 1fr;
+      }
       
       .bl-section-1 { 
+       
+        margin: 100px auto;
         display: flex;
         flex-direction: column;
         justify-content: space-between;
         width: 100%;
+        border-right: 1px solid;
+
+        @media screen and (max-width: 890px) {
+         margin:50px auto;
+        }
 
       span { 
+        
         padding-bottom: 50px;
-        font-family: $font-1;
+        font-family: "$font-1";
 
         }
 
       h3 {
-        font-family: $font-2;
+      font-family: "$font-2";
       font-size: 2rem;
       font-weight: 800;
       letter-spacing: 1px;
       padding-bottom: 30px;
+
+      @media screen and (max-width: 550px) {
+       font-size: 1.5rem;
+       }
       }
       .img-section-2-left { 
-        width: 100%;
-        padding-top: 20px ;
-        padding-bottom: 40px;
+        
+        img{ 
+          width: 85%;
+          margin-left: 50px;
+        margin-right: 50px;
+        padding-bottom: 30px;}
+        
       }
       p { 
-        font-style: italic;
-        font-family: $font-1;
+        width: 80%;
+        font-family: "$font-1";
+        text-align: center;
         line-height: 30px;
-        padding-left: 80px;
-        padding-right: 80px;
+        margin: 0 auto;
         padding-bottom: 40px;
+
+        @media screen and (max-width: 550px) {
+          font-size: 0.8rem;
+          }
+        
       }
       .btn-1 { 
+        
         height: 50px;
         margin: 0 auto;
         padding-left: 40px;
@@ -157,48 +243,81 @@ main {
         border: 2px solid black;
         background: none;
         font-size: 1rem;
-        font-family: $font-2;
+        font-family: "$font-2";
         font-weight: 700;
         letter-spacing: 2px;
-       
+        cursor: pointer;
+
+        &:hover {
+          border: 1px solid skyblue;
+          color: skyblue;
+          transform: scale(1.2);
+          transition: 0.2s;
+        }
       }
       }
       .br-section-1{
-          display: flex;
+         
+        margin: 100px auto;
+        display: flex;
         flex-direction: column;
         justify-content: space-between;
         width: 100%;
+      
 
+        @media screen and (max-width: 890px) {
+          border-top:1px solid rgb(209, 209, 209);
+        
+        }
         
       span { 
         padding-bottom: 50px;
-        font-family: $font-1;
-
+        font-family:"$font-1";
+        margin: 0 auto;
+        
+        @media screen and (max-width: 890px) {
+          margin-top: 80px;
+        
+        }
         }
 
       h3 {
-        font-family: $font-2;
+        font-family: "$font-2";
       font-size: 2rem;
       font-weight: 800;
       letter-spacing: 1px;
       padding-bottom: 30px;
+
+      @media screen and (max-width: 550px) {
+        font-size: 1.5rem;
+        }
       }
 
       .img-section-2-right{ 
-        padding-top: 20px ;
-        padding-bottom: 40px;  
+        img { 
+        width: 85%;
+        margin-left: 50px;
+        margin-right: 50px;
+        padding-right: 10px;
+      padding-bottom: 30px;}
+      
+      
       }
 
       p { 
-        font-style: italic;
-        font-family: $font-1;
+       width: 80%;
+        font-family: "$font-1";
         line-height: 30px;
-        padding-left: 80px;
-        padding-right: 80px;
         padding-bottom: 40px;
+       margin: 0 auto;
+
+       @media screen and (max-width: 550px) {
+        font-size: 0.8rem;
+        }
       }
 
       .btn-1 { 
+      
         height: 50px;
         margin: 0 auto;
         padding-left: 40px;
@@ -206,13 +325,21 @@ main {
         border: 2px solid black;
         background: none;
         font-size: 1rem;
-        font-family: $font-2;
+        font-family: "$font-2";
         font-weight: 700;
         letter-spacing: 2px;
+        cursor: pointer;
+
+          &:hover {
+          border: 1px solid skyblue;
+          color: skyblue;
+          transform: scale(1.2);
+          transition: 0.2s;
+        }
         }
       }
     } 
-}
+  } }
        
   
    
