--- a/Styles/Components/_setting.scss
+++ b/Styles/Components/_setting.scss
@@ -25,7 +25,7 @@ li {
 }
 
 body { 
-  background: url(../assets/images/pic03.jpg)  center fixed ; 
+  background: url(../assets/images/bg.jpg)  center/cover  fixed ; 
   font-family: "font-1";
   min-height: 100vh;
   text-align: center;
