--- a/Styles/Components/_footer.scss
+++ b/Styles/Components/_footer.scss
@@ -17,6 +17,7 @@ footer {
     gap: 18px;
     padding: 60px 50px;
     text-transform: uppercase;
+    
 
     label {
       font-size: 0.7rem;
@@ -30,6 +31,7 @@ footer {
     textarea {
       background: none;
       border: 1px solid rgb(209, 209, 209);
+      resize: none;
     }
     .submit-container {
       display: flex;
