--- a/Styles/Components/_header.scss
+++ b/Styles/Components/_header.scss
@@ -10,9 +10,10 @@ header {
 
   @media screen and (max-width: 890px) {
     margin-top: 100px;
-    min-height: 40vh;
-   
+    min-height: 60vh;
    }
+
+
 
   @keyframes headerAnim {
     100% {
@@ -25,6 +26,7 @@ header {
     text-transform: uppercase;
     font-size: 4rem;
     font-weight: 800;
+    color: white;
 
     @media screen and (max-width: 600px) {
      font-size: 3rem;
@@ -37,8 +39,11 @@ header {
   p {
     margin: 40px auto 60px;
     width: 85%;
-
+    color: white;
+    font-size:1.1rem ;
+    font-family:"$font-1" ;
     font-style: italic;
+
     @media screen and (max-width: 450px) {
       font-size: 0.8rem;
       }
@@ -59,5 +64,8 @@ header {
       
       transform: rotate(90deg)
     }
+    @media screen and (max-width: 890px) {
+      display: none;
+     }
   }
 }
