--- a/Styles/Components/_main.scss
+++ b/Styles/Components/_main.scss
@@ -91,16 +91,37 @@ main {
         border: 1px solid rgb(209, 209, 209);
         position: absolute;
         width: 30%;
-        left: 60%;
-        top: 7%;
+        right: 10%;
+        top: 1.5%;
+        @media screen and (max-width: 790px) {
+          right: 7%;
+          }
+          @media screen and (max-width: 550px) {
+            right: 5%;
+            }
+            @media screen and (max-width: 410px) {
+             display: none;
+              }
+    
+
     }      
     &::after{
       content: "";
-      border: 1px solid black;
+      border: 1px solid rgb(209, 209, 209);
       position: absolute;
       width: 30%;
       left: 10%;
-      top: 7%; } }
+      top: 1.5%;
+    
+      @media screen and (max-width: 790px) {
+        left: 7%;
+        }
+        @media screen and (max-width: 550px) {
+          left: 5%;
+          }
+          @media screen and (max-width: 410px) {
+           display: none;
+            }} }
 
 
     h2 { 
@@ -168,8 +189,7 @@ main {
     
      
     }
-    .bot-section-1  
-    { 
+    .bot-section-1  { 
       margin-top: 100px;
       display: grid;
       grid-template-columns:50% 50%;
@@ -182,16 +202,18 @@ main {
       }
       
       .bl-section-1 { 
-       
-        margin: 100px auto;
+        padding-top: 80px;
+        padding-bottom: 80px;
+        margin: 0 auto;
         display: flex;
         flex-direction: column;
         justify-content: space-between;
         width: 100%;
-        border-right: 1px solid;
+        border-right: 1px solid rgb(209, 209, 209);
 
         @media screen and (max-width: 890px) {
-         margin:50px auto;
+         margin:0 auto;
+         border-right: none;
         }
 
       span { 
@@ -216,9 +238,16 @@ main {
         
         img{ 
           width: 85%;
-          margin-left: 50px;
-        margin-right: 50px;
-        padding-bottom: 30px;}
+        margin: 0 auto;
+        padding-bottom: 30px;
+          object-fit: cover;
+
+        @media screen and (max-width: 890px) {
+          width: 85%;
+        margin: 0 auto;
+     
+        
+        }}
         
       }
       p { 
@@ -257,8 +286,9 @@ main {
       }
       }
       .br-section-1{
-         
-        margin: 100px auto;
+        padding-top: 80px;
+        padding-bottom: 80px;
+        margin: 0 auto;
         display: flex;
         flex-direction: column;
         justify-content: space-between;
@@ -267,6 +297,8 @@ main {
 
         @media screen and (max-width: 890px) {
           border-top:1px solid rgb(209, 209, 209);
+          margin:0 auto;
+          padding-top: 10px;
         
         }
         
@@ -281,7 +313,7 @@ main {
         }
         }
 
-      h3 {
+      h3{ 
         font-family: "$font-2";
       font-size: 2rem;
       font-weight: 800;
@@ -296,13 +328,14 @@ main {
       .img-section-2-right{ 
         img { 
         width: 85%;
-        margin-left: 50px;
-        margin-right: 50px;
-        padding-right: 10px;
-      padding-bottom: 30px;}
+        padding-bottom: 30px;
+        margin: 0 auto;
+    
+      @media screen and (max-width: 890px) {
+        width: 85%;
+      margin: 0 auto;
       
-      
-      }
+      }}} 
 
       p { 
        width: 80%;
@@ -336,11 +369,13 @@ main {
           transform: scale(1.2);
           transition: 0.2s;
         }
-        }
-      }
-    } 
-  } }
-       
+        }}
+      
+    
+  } 
+}
+}
+
   
    
   
