--- a/Styles/style.css
+++ b/Styles/style.css
@@ -20,7 +20,7 @@ li {
 }
 
 body {
-  background: url(../assets/images/pic03.jpg) center fixed;
+  background: url(../assets/images/bg.jpg) center/cover fixed;
   font-family: "font-1";
   min-height: 100vh;
   text-align: center;
@@ -77,7 +77,7 @@ header {
 @media screen and (max-width: 890px) {
   header {
     margin-top: 100px;
-    min-height: 40vh;
+    min-height: 60vh;
   }
 }
 
@@ -101,6 +101,7 @@ header h1 {
   text-transform: uppercase;
   font-size: 4rem;
   font-weight: 800;
+  color: white;
 }
 
 @media screen and (max-width: 600px) {
@@ -118,6 +119,9 @@ header h1 {
 header p {
   margin: 40px auto 60px;
   width: 85%;
+  color: white;
+  font-size: 1.1rem;
+  font-family: "$font-1";
   font-style: italic;
 }
 
@@ -150,6 +154,12 @@ header span {
 header span:hover {
   -webkit-transform: rotate(90deg);
           transform: rotate(90deg);
+}
+
+@media screen and (max-width: 890px) {
+  header span {
+    display: none;
+  }
 }
 
 main {
@@ -266,17 +276,53 @@ main .section-1 .top-section-1 span::before {
   border: 1px solid #d1d1d1;
   position: absolute;
   width: 30%;
-  left: 60%;
-  top: 7%;
+  right: 10%;
+  top: 1.5%;
+}
+
+@media screen and (max-width: 790px) {
+  main .section-1 .top-section-1 span::before {
+    right: 7%;
+  }
+}
+
+@media screen and (max-width: 550px) {
+  main .section-1 .top-section-1 span::before {
+    right: 5%;
+  }
+}
+
+@media screen and (max-width: 410px) {
+  main .section-1 .top-section-1 span::before {
+    display: none;
+  }
 }
 
 main .section-1 .top-section-1 span::after {
   content: "";
-  border: 1px solid black;
+  border: 1px solid #d1d1d1;
   position: absolute;
   width: 30%;
   left: 10%;
-  top: 7%;
+  top: 1.5%;
+}
+
+@media screen and (max-width: 790px) {
+  main .section-1 .top-section-1 span::after {
+    left: 7%;
+  }
+}
+
+@media screen and (max-width: 550px) {
+  main .section-1 .top-section-1 span::after {
+    left: 5%;
+  }
+}
+
+@media screen and (max-width: 410px) {
+  main .section-1 .top-section-1 span::after {
+    display: none;
+  }
 }
 
 main .section-1 .top-section-1 h2 {
@@ -371,7 +417,9 @@ main .section-1 .bot-section-1 {
 }
 
 main .section-1 .bot-section-1 .bl-section-1 {
-  margin: 100px auto;
+  padding-top: 80px;
+  padding-bottom: 80px;
+  margin: 0 auto;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -383,12 +431,13 @@ main .section-1 .bot-section-1 .bl-section-1 {
       -ms-flex-pack: justify;
           justify-content: space-between;
   width: 100%;
-  border-right: 1px solid;
+  border-right: 1px solid #d1d1d1;
 }
 
 @media screen and (max-width: 890px) {
   main .section-1 .bot-section-1 .bl-section-1 {
-    margin: 50px auto;
+    margin: 0 auto;
+    border-right: none;
   }
 }
 
@@ -413,9 +462,17 @@ main .section-1 .bot-section-1 .bl-section-1 h3 {
 
 main .section-1 .bot-section-1 .bl-section-1 .img-section-2-left img {
   width: 85%;
-  margin-left: 50px;
-  margin-right: 50px;
+  margin: 0 auto;
   padding-bottom: 30px;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+
+@media screen and (max-width: 890px) {
+  main .section-1 .bot-section-1 .bl-section-1 .img-section-2-left img {
+    width: 85%;
+    margin: 0 auto;
+  }
 }
 
 main .section-1 .bot-section-1 .bl-section-1 p {
@@ -457,7 +514,9 @@ main .section-1 .bot-section-1 .bl-section-1 .btn-1:hover {
 }
 
 main .section-1 .bot-section-1 .br-section-1 {
-  margin: 100px auto;
+  padding-top: 80px;
+  padding-bottom: 80px;
+  margin: 0 auto;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -474,6 +533,8 @@ main .section-1 .bot-section-1 .br-section-1 {
 @media screen and (max-width: 890px) {
   main .section-1 .bot-section-1 .br-section-1 {
     border-top: 1px solid #d1d1d1;
+    margin: 0 auto;
+    padding-top: 10px;
   }
 }
 
@@ -505,10 +566,15 @@ main .section-1 .bot-section-1 .br-section-1 h3 {
 
 main .section-1 .bot-section-1 .br-section-1 .img-section-2-right img {
   width: 85%;
-  margin-left: 50px;
-  margin-right: 50px;
-  padding-right: 10px;
   padding-bottom: 30px;
+  margin: 0 auto;
+}
+
+@media screen and (max-width: 890px) {
+  main .section-1 .bot-section-1 .br-section-1 .img-section-2-right img {
+    width: 85%;
+    margin: 0 auto;
+  }
 }
 
 main .section-1 .bot-section-1 .br-section-1 p {
@@ -594,6 +660,7 @@ footer form input[type="text"],
 footer form textarea {
   background: none;
   border: 1px solid #d1d1d1;
+  resize: none;
 }
 
 footer form .submit-container {
