--- a/Styles/Components/_footer.scss
+++ b/Styles/Components/_footer.scss
@@ -2,7 +2,7 @@ footer {
   background: rgb(233, 233, 233);
   min-height: 640px;
   width: 85%;
-  max-width: 1200px;
+  max-width: 1400px;
   margin: 30px auto;
   display: grid;
   grid-template-columns: 50% 50%;
@@ -53,13 +53,13 @@ footer {
           border: 1px solid skyblue;
           color: skyblue;
           transform: scale(1.2);
-          transition: 0.2s;
+          transition: 0.4s;
           cursor: pointer;
         }
       }
       }
     }
-  }
+  
   .infos-contact {
     border-left: 1px solid rgb(209, 209, 209);
     display: grid;
@@ -108,9 +108,15 @@ footer {
           display: flex;
           justify-content: center;
           align-items: center;
+         
+          &:hover {cursor: pointer;
+            transition: 0.4s;
+            transform: scale(1.5);
+          }
 
          
         }
       }
     }
   }
+}
