--- a/Styles/Components/_main.scss
+++ b/Styles/Components/_main.scss
@@ -29,11 +29,8 @@ main {
 
         &:hover li:not(:hover) {
           background: none;
-          color: white;
+          color: black;
 
-          a {
-            color: white;
-          }
         }
         li {
           padding: 0 15px;
@@ -44,17 +41,26 @@ main {
           transition: 0.2s;
           color: white;
           
-
-
-          &:first-child {
-            background: white;
+         
+          & a:not(:hover) { 
+            background: none;
+            color:black;
             
           }
 
-          &:hover  {
+          &:first-child {
             background: white;
             color: black;
           }
+
+         
+
+          &:hover  {
+            background: white;
+            color: black;}
+
+            a:hover { color: black; }
+          
         }
       }
       &.nav-right {
@@ -64,6 +70,13 @@ main {
         max-width: 300px;
         justify-content: space-around;
         font-weight: bold;
+
+        img:hover { 
+          cursor: pointer;
+          transition: 0.4s;
+          transform: scale(1.5);
+        }
+
       }
     }
   }
@@ -83,7 +96,7 @@ main {
  
   
     span{ 
-      padding-bottom: 50px;
+      padding-bottom: 80px;
       font-family: "$font-1";
 
       &::before{
@@ -125,9 +138,9 @@ main {
 
 
     h2 { 
-      font-family: "$font-2";
-      font-size: 3rem;
-      font-weight: 700;
+      font-family: "font-2";
+      font-size: 5rem;
+      font-weight: 800;
       letter-spacing: 2px;
       padding-bottom: 30px;
 
@@ -145,9 +158,8 @@ main {
     }
 
     p { 
-      font-family: "$font-1";
+      font-family: $font-1;
       line-height: 30px;
-      padding-bottom: 60px;
       font-style: italic;
 
       @media screen and (max-width: 750px) {
@@ -159,12 +171,28 @@ main {
         
     }
   }
-    img { 
-      margin: 0 auto;
-      width: 85%;
-      padding-bottom: 50px;
-      
+
+  .img-container { 
+    max-width:100%;
+    overflow: hidden;
+    margin: 60px 80px;
+    @media screen and (max-width: 700px) {
+      margin: 80px 40px;
     }
+
+
+    img { 
+      
+      max-width: 100%;
+      transition: 0.5s ease;
+  
+
+  &:hover {
+  transform: scale(1.1);
+}
+
+      
+    } }
       .btn-1 { 
       
         height: 50px;
@@ -183,7 +211,7 @@ main {
           border: 1px solid skyblue;
           color: skyblue;
           transform: scale(1.2);
-          transition: 0.2s;
+          transition: 0.4s;
         }
   }
     
@@ -234,13 +262,23 @@ main {
        font-size: 1.5rem;
        }
       }
-      .img-section-2-left { 
+      .img-section-2-left {
+         max-width:100%;
+        overflow: hidden;
+        margin: 0px 50px;
+
+        @media screen and (max-width: 700px) {
+          margin: 0px 20px;}
         
         img{ 
-          width: 85%;
-        margin: 0 auto;
-        padding-bottom: 30px;
+          max-width: 100%;
+          padding-bottom: 20px;
           object-fit: cover;
+          transition: 0.5s ease;
+
+          
+          &:hover {
+          transform: scale(1.1);}
 
         @media screen and (max-width: 890px) {
           width: 85%;
@@ -281,7 +319,7 @@ main {
           border: 1px solid skyblue;
           color: skyblue;
           transform: scale(1.2);
-          transition: 0.2s;
+          transition: 0.4s;
         }
       }
       }
@@ -326,10 +364,21 @@ main {
       }
 
       .img-section-2-right{ 
+        max-width:100%;
+        overflow: hidden;
+        margin: 0px 50px;
+        @media screen and (max-width: 700px) {
+          margin: 0px 20px;}
+        
         img { 
-        width: 85%;
-        padding-bottom: 30px;
-        margin: 0 auto;
+          max-width: 100%;
+          padding-bottom: 20px;
+          object-fit: cover;
+          transition: 0.5s ease;
+
+          
+          &:hover {
+          transform: scale(1.1);}
     
       @media screen and (max-width: 890px) {
         width: 85%;
@@ -367,7 +416,7 @@ main {
           border: 1px solid skyblue;
           color: skyblue;
           transform: scale(1.2);
-          transition: 0.2s;
+          transition: 0.4s;
         }
         }}
       
