--- a/Styles/style.css
+++ b/Styles/style.css
@@ -1,11 +1,11 @@
 @font-face {
   font-family: "font-1";
-  src: url(/Styles/assets/Font/Merriweather/Merriweather-Regular.ttf);
+  src: url(../assets/Font/Merriweather/Merriweather-Regular.ttf);
 }
 
 @font-face {
   font-family: "font-2";
-  src: url(/Styles/assets/Font/Merriweather/Merriweather-Bold.ttf);
+  src: url(../assets/Font/Merriweather/Merriweather-Bold.ttf);
 }
 
 * {
@@ -13,6 +13,10 @@
   padding: 0;
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
+}
+
+a {
+  text-decoration: none;
 }
 
 li {
@@ -76,8 +80,8 @@ header {
 
 @media screen and (max-width: 890px) {
   header {
-    margin-top: 100px;
-    min-height: 60vh;
+    margin-top: 50px;
+    min-height: 30vh;
   }
 }
 
@@ -204,11 +208,7 @@ main nav ul.nav-left {
 
 main nav ul.nav-left:hover li:not(:hover) {
   background: none;
-  color: white;
-}
-
-main nav ul.nav-left:hover li:not(:hover) a {
-  color: white;
+  color: black;
 }
 
 main nav ul.nav-left li {
@@ -226,12 +226,22 @@ main nav ul.nav-left li {
   color: white;
 }
 
+main nav ul.nav-left li a:not(:hover) {
+  background: none;
+  color: black;
+}
+
 main nav ul.nav-left li:first-child {
   background: white;
+  color: black;
 }
 
 main nav ul.nav-left li:hover {
   background: white;
+  color: black;
+}
+
+main nav ul.nav-left li a:hover {
   color: black;
 }
 
@@ -243,6 +253,14 @@ main nav ul.nav-right {
   -ms-flex-pack: distribute;
       justify-content: space-around;
   font-weight: bold;
+}
+
+main nav ul.nav-right img:hover {
+  cursor: pointer;
+  -webkit-transition: 0.4s;
+  transition: 0.4s;
+  -webkit-transform: scale(1.5);
+          transform: scale(1.5);
 }
 
 main .section-1 {
@@ -267,7 +285,7 @@ main .section-1 .top-section-1 {
 }
 
 main .section-1 .top-section-1 span {
-  padding-bottom: 50px;
+  padding-bottom: 80px;
   font-family: "$font-1";
 }
 
@@ -326,9 +344,9 @@ main .section-1 .top-section-1 span::after {
 }
 
 main .section-1 .top-section-1 h2 {
-  font-family: "$font-2";
-  font-size: 3rem;
-  font-weight: 700;
+  font-family: "font-2";
+  font-size: 5rem;
+  font-weight: 800;
   letter-spacing: 2px;
   padding-bottom: 30px;
 }
@@ -352,9 +370,8 @@ main .section-1 .top-section-1 h2 {
 }
 
 main .section-1 .top-section-1 p {
-  font-family: "$font-1";
+  font-family: "font-1", sans-serif;
   line-height: 30px;
-  padding-bottom: 60px;
   font-style: italic;
 }
 
@@ -370,10 +387,27 @@ main .section-1 .top-section-1 p {
   }
 }
 
-main .section-1 .top-section-1 img {
-  margin: 0 auto;
-  width: 85%;
-  padding-bottom: 50px;
+main .section-1 .top-section-1 .img-container {
+  max-width: 100%;
+  overflow: hidden;
+  margin: 60px 80px;
+}
+
+@media screen and (max-width: 700px) {
+  main .section-1 .top-section-1 .img-container {
+    margin: 80px 40px;
+  }
+}
+
+main .section-1 .top-section-1 .img-container img {
+  max-width: 100%;
+  -webkit-transition: 0.5s ease;
+  transition: 0.5s ease;
+}
+
+main .section-1 .top-section-1 .img-container img:hover {
+  -webkit-transform: scale(1.1);
+          transform: scale(1.1);
 }
 
 main .section-1 .top-section-1 .btn-1 {
@@ -395,8 +429,8 @@ main .section-1 .top-section-1 .btn-1:hover {
   color: skyblue;
   -webkit-transform: scale(1.2);
           transform: scale(1.2);
-  -webkit-transition: 0.2s;
-  transition: 0.2s;
+  -webkit-transition: 0.4s;
+  transition: 0.4s;
 }
 
 main .section-1 .bot-section-1 {
@@ -460,12 +494,30 @@ main .section-1 .bot-section-1 .bl-section-1 h3 {
   }
 }
 
+main .section-1 .bot-section-1 .bl-section-1 .img-section-2-left {
+  max-width: 100%;
+  overflow: hidden;
+  margin: 0px 50px;
+}
+
+@media screen and (max-width: 700px) {
+  main .section-1 .bot-section-1 .bl-section-1 .img-section-2-left {
+    margin: 0px 20px;
+  }
+}
+
 main .section-1 .bot-section-1 .bl-section-1 .img-section-2-left img {
-  width: 85%;
-  margin: 0 auto;
-  padding-bottom: 30px;
+  max-width: 100%;
+  padding-bottom: 20px;
   -o-object-fit: cover;
      object-fit: cover;
+  -webkit-transition: 0.5s ease;
+  transition: 0.5s ease;
+}
+
+main .section-1 .bot-section-1 .bl-section-1 .img-section-2-left img:hover {
+  -webkit-transform: scale(1.1);
+          transform: scale(1.1);
 }
 
 @media screen and (max-width: 890px) {
@@ -509,8 +561,8 @@ main .section-1 .bot-section-1 .bl-section-1 .btn-1:hover {
   color: skyblue;
   -webkit-transform: scale(1.2);
           transform: scale(1.2);
-  -webkit-transition: 0.2s;
-  transition: 0.2s;
+  -webkit-transition: 0.4s;
+  transition: 0.4s;
 }
 
 main .section-1 .bot-section-1 .br-section-1 {
@@ -564,10 +616,30 @@ main .section-1 .bot-section-1 .br-section-1 h3 {
   }
 }
 
+main .section-1 .bot-section-1 .br-section-1 .img-section-2-right {
+  max-width: 100%;
+  overflow: hidden;
+  margin: 0px 50px;
+}
+
+@media screen and (max-width: 700px) {
+  main .section-1 .bot-section-1 .br-section-1 .img-section-2-right {
+    margin: 0px 20px;
+  }
+}
+
 main .section-1 .bot-section-1 .br-section-1 .img-section-2-right img {
-  width: 85%;
-  padding-bottom: 30px;
-  margin: 0 auto;
+  max-width: 100%;
+  padding-bottom: 20px;
+  -o-object-fit: cover;
+     object-fit: cover;
+  -webkit-transition: 0.5s ease;
+  transition: 0.5s ease;
+}
+
+main .section-1 .bot-section-1 .br-section-1 .img-section-2-right img:hover {
+  -webkit-transform: scale(1.1);
+          transform: scale(1.1);
 }
 
 @media screen and (max-width: 890px) {
@@ -610,15 +682,15 @@ main .section-1 .bot-section-1 .br-section-1 .btn-1:hover {
   color: skyblue;
   -webkit-transform: scale(1.2);
           transform: scale(1.2);
-  -webkit-transition: 0.2s;
-  transition: 0.2s;
+  -webkit-transition: 0.4s;
+  transition: 0.4s;
 }
 
 footer {
   background: #e9e9e9;
   min-height: 640px;
   width: 85%;
-  max-width: 1200px;
+  max-width: 1400px;
   margin: 30px auto;
   display: -ms-grid;
   display: grid;
@@ -687,12 +759,12 @@ footer form .submit-container input[type="submit"]:hover {
   color: skyblue;
   -webkit-transform: scale(1.2);
           transform: scale(1.2);
-  -webkit-transition: 0.2s;
-  transition: 0.2s;
+  -webkit-transition: 0.4s;
+  transition: 0.4s;
   cursor: pointer;
 }
 
-.infos-contact {
+footer .infos-contact {
   border-left: 1px solid #d1d1d1;
   display: -ms-grid;
   display: grid;
@@ -700,7 +772,7 @@ footer form .submit-container input[type="submit"]:hover {
       grid-template-rows: repeat(4, 1fr);
 }
 
-.infos-contact div {
+footer .infos-contact div {
   border-top: 1px solid #d1d1d1;
   display: -ms-grid;
   display: grid;
@@ -711,7 +783,7 @@ footer form .submit-container input[type="submit"]:hover {
           align-items: center;
 }
 
-.infos-contact div h3 {
+footer .infos-contact div h3 {
   text-transform: uppercase;
   font-size: 0.7rem;
   padding-left: 60px;
@@ -719,20 +791,20 @@ footer form .submit-container input[type="submit"]:hover {
 }
 
 @media screen and (max-width: 550px) {
-  .infos-contact div h3 {
+  footer .infos-contact div h3 {
     font-size: 0.7rem;
     padding-left: 30px;
   }
 }
 
-.infos-contact div p {
+footer .infos-contact div p {
   font-size: 0.8rem;
   line-height: 26px;
   color: #8a8a8a;
   font-family: "$font-1";
 }
 
-.infos-contact .social ul {
+footer .infos-contact .social ul {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -741,7 +813,7 @@ footer form .submit-container input[type="submit"]:hover {
           justify-content: center;
 }
 
-.infos-contact .social ul li {
+footer .infos-contact .social ul li {
   border: 1px solid #d1d1d1;
   font-size: 1.5rem;
   border-radius: 150px;
@@ -757,5 +829,13 @@ footer form .submit-container input[type="submit"]:hover {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+}
+
+footer .infos-contact .social ul li:hover {
+  cursor: pointer;
+  -webkit-transition: 0.4s;
+  transition: 0.4s;
+  -webkit-transform: scale(1.5);
+          transform: scale(1.5);
 }
 /*# sourceMappingURL=style.css.map */
