--- a/Components/_main.scss
+++ b/Components/_main.scss
@@ -1,10 +1,7 @@
-
-
 main {
   width: 85%;
   margin: -65px auto 30px;
 
-  
   nav {
     display: flex;
     justify-content: space-between;
@@ -14,8 +11,7 @@ main {
     position: relative;
 
     @media screen and (max-width: 890px) {
-     display: none;
-    
+      display: none;
     }
     ul {
       display: flex;
@@ -29,8 +25,10 @@ main {
 
         &:hover li:not(:hover) {
           background: none;
-          color: black;
 
+          a {
+            color: white;
+          }
         }
         li {
           padding: 0 15px;
@@ -40,27 +38,26 @@ main {
           cursor: pointer;
           transition: 0.2s;
           color: white;
-          
-         
-          & a:not(:hover) { 
-            background: none;
-            color:black;
-            
+
+          a {
+            color: white;
           }
 
           &:first-child {
             background: white;
-            color: black;
+
+            a {
+              color: black;
+            }
           }
 
-         
-
-          &:hover  {
+          &:hover {
             background: white;
-            color: black;}
 
-            a:hover { color: black; }
-          
+            a {
+              color: black;
+            }
+          }
         }
       }
       &.nav-right {
@@ -71,12 +68,11 @@ main {
         justify-content: space-around;
         font-weight: bold;
 
-        img:hover { 
+        img:hover {
           cursor: pointer;
           transition: 0.4s;
           transform: scale(1.5);
         }
-
       }
     }
   }
@@ -85,116 +81,105 @@ main {
     min-height: 600px;
     padding-top: 100px;
     margin: 0 auto;
-  
-   
-  
-  .top-section-1 {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    position: relative;
- 
-  
-    span{ 
-      padding-bottom: 80px;
-      font-family: "$font-1";
 
-      &::before{
-        content: "";
-        border: 1px solid rgb(209, 209, 209);
-        position: absolute;
-        width: 30%;
-        right: 10%;
-        top: 1.5%;
-        @media screen and (max-width: 790px) {
-          right: 7%;
+    .top-section-1 {
+      display: flex;
+      flex-direction: column;
+      justify-content: space-between;
+      position: relative;
+
+      span {
+        padding-bottom: 80px;
+        font-family: "$font-1";
+
+        &::before {
+          content: "";
+          border: 1px solid rgb(209, 209, 209);
+          position: absolute;
+          width: 30%;
+          right: 10%;
+          top: 1.5%;
+          @media screen and (max-width: 790px) {
+            right: 7%;
           }
           @media screen and (max-width: 550px) {
             right: 5%;
-            }
-            @media screen and (max-width: 410px) {
-             display: none;
-              }
-    
-
-    }      
-    &::after{
-      content: "";
-      border: 1px solid rgb(209, 209, 209);
-      position: absolute;
-      width: 30%;
-      left: 10%;
-      top: 1.5%;
-    
-      @media screen and (max-width: 790px) {
-        left: 7%;
-        }
-        @media screen and (max-width: 550px) {
-          left: 5%;
           }
           @media screen and (max-width: 410px) {
-           display: none;
-            }} }
+            display: none;
+          }
+        }
+        &::after {
+          content: "";
+          border: 1px solid rgb(209, 209, 209);
+          position: absolute;
+          width: 30%;
+          left: 10%;
+          top: 1.5%;
 
+          @media screen and (max-width: 790px) {
+            left: 7%;
+          }
+          @media screen and (max-width: 550px) {
+            left: 5%;
+          }
+          @media screen and (max-width: 410px) {
+            display: none;
+          }
+        }
+      }
 
-    h2 { 
-      font-family: "font-2";
-      font-size: 5rem;
-      font-weight: 800;
-      letter-spacing: 2px;
-      padding-bottom: 30px;
+      h2 {
+        font-family: "font-2";
+        font-size: 5rem;
+        font-weight: 800;
+        letter-spacing: 2px;
+        padding-bottom: 30px;
 
-      @media screen and (max-width: 710px) {
-        font-size: 2rem;
+        @media screen and (max-width: 710px) {
+          font-size: 2rem;
         }
 
         @media screen and (max-width: 490px) {
           font-size: 1.5rem;
-          }
+        }
 
-          @media screen and (max-width: 390px) {
-            font-size: 1.2rem;
-            }
-    }
+        @media screen and (max-width: 390px) {
+          font-size: 1.2rem;
+        }
+      }
 
-    p { 
-      font-family: $font-1;
-      line-height: 30px;
-      font-style: italic;
+      p {
+        font-family: $font-1;
+        line-height: 30px;
+        font-style: italic;
 
-      @media screen and (max-width: 750px) {
-        font-size: 0.9rem;
-    
+        @media screen and (max-width: 750px) {
+          font-size: 0.9rem;
         }
         @media screen and (max-width: 550px) {
           font-size: 0.8rem;
-        
-    }
-  }
+        }
+      }
 
-  .img-container { 
-    max-width:100%;
-    overflow: hidden;
-    margin: 60px 80px;
-    @media screen and (max-width: 700px) {
-      margin: 80px 40px;
-    }
+      .img-container {
+        max-width: 100%;
+        overflow: hidden;
+        margin: 60px 80px;
+        @media screen and (max-width: 700px) {
+          margin: 80px 40px;
+        }
 
+        img {
+          max-width: 100%;
+          transition: 0.5s ease;
 
-    img { 
-      
-      max-width: 100%;
-      transition: 0.5s ease;
-  
-
-  &:hover {
-  transform: scale(1.1);
-}
-
-      
-    } }
-      .btn-1 { 
-      
+          &:hover {
+            transform: scale(1.1);
+          }
+        }
+      }
+      .btn-1 {
         height: 50px;
         margin: 0 auto;
         padding-left: 40px;
@@ -213,23 +198,20 @@ main {
           transform: scale(1.2);
           transition: 0.4s;
         }
-  }
-    
-     
+      }
     }
-    .bot-section-1  { 
+    .bot-section-1 {
       margin-top: 100px;
       display: grid;
-      grid-template-columns:50% 50%;
+      grid-template-columns: 50% 50%;
       border-top: 1px solid rgb(209, 209, 209);
       width: 100%;
 
-     
       @media screen and (max-width: 890px) {
         grid-template-columns: 1fr;
       }
-      
-      .bl-section-1 { 
+
+      .bl-section-1 {
         padding-top: 80px;
         padding-bottom: 80px;
         margin: 0 auto;
@@ -240,90 +222,85 @@ main {
         border-right: 1px solid rgb(209, 209, 209);
 
         @media screen and (max-width: 890px) {
-         margin:0 auto;
-         border-right: none;
+          margin: 0 auto;
+          border-right: none;
         }
 
-      span { 
-        
-        padding-bottom: 50px;
-        font-family: "$font-1";
-
+        span {
+          padding-bottom: 50px;
+          font-family: "$font-1";
         }
 
-      h3 {
-      font-family: "$font-2";
-      font-size: 2rem;
-      font-weight: 800;
-      letter-spacing: 1px;
-      padding-bottom: 30px;
+        h3 {
+          font-family: "$font-2";
+          font-size: 2rem;
+          font-weight: 800;
+          letter-spacing: 1px;
+          padding-bottom: 30px;
 
-      @media screen and (max-width: 550px) {
-       font-size: 1.5rem;
-       }
-      }
-      .img-section-2-left {
-         max-width:100%;
-        overflow: hidden;
-        margin: 0px 50px;
-
-        @media screen and (max-width: 700px) {
-          margin: 0px 20px;}
-        
-        img{ 
-          max-width: 100%;
-          padding-bottom: 20px;
-          object-fit: cover;
-          transition: 0.5s ease;
-
-          
-          &:hover {
-          transform: scale(1.1);}
-
-        @media screen and (max-width: 890px) {
-          width: 85%;
-        margin: 0 auto;
-     
-        
-        }}
-        
-      }
-      p { 
-        width: 80%;
-        font-family: "$font-1";
-        text-align: center;
-        line-height: 30px;
-        margin: 0 auto;
-        padding-bottom: 40px;
-
-        @media screen and (max-width: 550px) {
-          font-size: 0.8rem;
+          @media screen and (max-width: 550px) {
+            font-size: 1.5rem;
           }
-        
-      }
-      .btn-1 { 
-        
-        height: 50px;
-        margin: 0 auto;
-        padding-left: 40px;
-        padding-right: 40px;
-        border: 2px solid black;
-        background: none;
-        font-size: 1rem;
-        font-family: "$font-2";
-        font-weight: 700;
-        letter-spacing: 2px;
-        cursor: pointer;
+        }
+        .img-section-2-left {
+          max-width: 100%;
+          overflow: hidden;
+          margin: 0px 50px;
 
-        &:hover {
-          border: 1px solid skyblue;
-          color: skyblue;
-          transform: scale(1.2);
-          transition: 0.4s;
+          @media screen and (max-width: 700px) {
+            margin: 0px 20px;
+          }
+
+          img {
+            max-width: 100%;
+            padding-bottom: 20px;
+            object-fit: cover;
+            transition: 0.5s ease;
+
+            &:hover {
+              transform: scale(1.1);
+            }
+
+            @media screen and (max-width: 890px) {
+              width: 85%;
+              margin: 0 auto;
+            }
+          }
+        }
+        p {
+          width: 80%;
+          font-family: "$font-1";
+          text-align: center;
+          line-height: 30px;
+          margin: 20px auto;
+          padding-bottom: 40px;
+
+          @media screen and (max-width: 550px) {
+            font-size: 0.8rem;
+          }
+        }
+        .btn-1 {
+          height: 50px;
+          margin: 0 auto;
+          padding-left: 40px;
+          padding-right: 40px;
+          border: 2px solid black;
+          background: none;
+          font-size: 1rem;
+          font-family: "$font-2";
+          font-weight: 700;
+          letter-spacing: 2px;
+          cursor: pointer;
+
+          &:hover {
+            border: 1px solid skyblue;
+            color: skyblue;
+            transform: scale(1.2);
+            transition: 0.4s;
+          }
         }
       }
-      }
-      .br-section-1{
+      .br-section-1 {
         padding-top: 80px;
         padding-bottom: 80px;
         margin: 0 auto;
@@ -331,104 +308,93 @@ main {
         flex-direction: column;
         justify-content: space-between;
         width: 100%;
-      
 
         @media screen and (max-width: 890px) {
-          border-top:1px solid rgb(209, 209, 209);
-          margin:0 auto;
+          border-top: 1px solid rgb(209, 209, 209);
+          margin: 0 auto;
           padding-top: 10px;
-        
-        }
-        
-      span { 
-        padding-bottom: 50px;
-        font-family:"$font-1";
-        margin: 0 auto;
-        
-        @media screen and (max-width: 890px) {
-          margin-top: 80px;
-        
-        }
         }
 
-      h3{ 
-        font-family: "$font-2";
-      font-size: 2rem;
-      font-weight: 800;
-      letter-spacing: 1px;
-      padding-bottom: 30px;
+        span {
+          padding-bottom: 50px;
+          font-family: "$font-1";
+          margin: 0 auto;
 
-      @media screen and (max-width: 550px) {
-        font-size: 1.5rem;
+          @media screen and (max-width: 890px) {
+            margin-top: 80px;
+          }
         }
-      }
 
-      .img-section-2-right{ 
-        max-width:100%;
-        overflow: hidden;
-        margin: 0px 50px;
-        @media screen and (max-width: 700px) {
-          margin: 0px 20px;}
-        
-        img { 
+        h3 {
+          font-family: "$font-2";
+          font-size: 2rem;
+          font-weight: 800;
+          letter-spacing: 1px;
+          padding-bottom: 30px;
+
+          @media screen and (max-width: 550px) {
+            font-size: 1.5rem;
+          }
+        }
+
+        .img-section-2-right {
           max-width: 100%;
-          padding-bottom: 20px;
-          object-fit: cover;
-          transition: 0.5s ease;
+          overflow: hidden;
+          margin: 0px 50px;
+          @media screen and (max-width: 700px) {
+            margin: 0px 20px;
+          }
 
-          
+          img {
+            max-width: 100%;
+            padding-bottom: 20px;
+            object-fit: cover;
+            transition: 0.5s ease;
+
+            &:hover {
+              transform: scale(1.1);
+            }
+
+            @media screen and (max-width: 890px) {
+              width: 85%;
+              margin: 0 auto;
+            }
+          }
+        }
+
+        p {
+          width: 80%;
+          font-family: "$font-1";
+          line-height: 30px;
+          padding-bottom: 40px;
+          margin: 20px auto;
+
+          @media screen and (max-width: 550px) {
+            font-size: 0.8rem;
+          }
+        }
+
+        .btn-1 {
+          height: 50px;
+          margin: 0 auto;
+          padding-left: 40px;
+          padding-right: 40px;
+          border: 2px solid black;
+          background: none;
+          font-size: 1rem;
+          font-family: "$font-2";
+          font-weight: 700;
+          letter-spacing: 2px;
+          cursor: pointer;
+
           &:hover {
-          transform: scale(1.1);}
-    
-      @media screen and (max-width: 890px) {
-        width: 85%;
-      margin: 0 auto;
-      
-      }}} 
-
-      p { 
-       width: 80%;
-        font-family: "$font-1";
-        line-height: 30px;
-        padding-bottom: 40px;
-       margin: 0 auto;
-
-       @media screen and (max-width: 550px) {
-        font-size: 0.8rem;
+            border: 1px solid skyblue;
+            color: skyblue;
+            transform: scale(1.2);
+            transition: 0.4s;
+          }
         }
       }
-
-      .btn-1 { 
-      
-        height: 50px;
-        margin: 0 auto;
-        padding-left: 40px;
-        padding-right: 40px;
-        border: 2px solid black;
-        background: none;
-        font-size: 1rem;
-        font-family: "$font-2";
-        font-weight: 700;
-        letter-spacing: 2px;
-        cursor: pointer;
-
-          &:hover {
-          border: 1px solid skyblue;
-          color: skyblue;
-          transform: scale(1.2);
-          transition: 0.4s;
-        }
-        }}
-      
-    
-  } 
+    }
+  }
 }
-}
-
-  
-   
-  
- 
- 
-
-      
