--- a/Components/_setting.scss
+++ b/Components/_setting.scss
@@ -1,10 +1,10 @@
 @font-face {
   font-family: "font-1";
-  src: url(../assets/Font/Merriweather/Merriweather-Regular.ttf);}
+  src: url(./assets/Font/Merriweather/Merriweather-Regular.ttf);}
 
 @font-face {
   font-family: "font-2";
-  src: url(../assets/Font/Merriweather/Merriweather-Bold.ttf); }
+  src: url(./assets/Font/Merriweather/Merriweather-Bold.ttf); }
     
   
 
@@ -28,7 +28,7 @@ li {
 }
 
 body { 
-  background: url(../assets/images/bg.jpg)  center/cover  fixed ; 
+  background: url(./assets/images/bg.jpg)  center/cover  fixed ; 
   font-family: "font-1";
   min-height: 100vh;
   text-align: center;
