--- a/Components/_header.scss
+++ b/Components/_header.scss
@@ -9,7 +9,7 @@ header {
   animation: headerAnim 1.5s forwards;
 
   @media screen and (max-width: 890px) {
-    margin-top:50px;
+    padding-top:120px;
     min-height: 30vh;
    }
 
