--- a/Components/_main.scss
+++ b/Components/_main.scss
@@ -136,11 +136,15 @@ main {
         letter-spacing: 2px;
         padding-bottom: 30px;
 
-        @media screen and (max-width: 710px) {
-          font-size: 2rem;
+        @media screen and (max-width: 900px) {
+          padding-left: 30px;
+          padding-right: 30px;
+        }
+        @media screen and (max-width: 820px) {
+          font-size: 3rem;
         }
 
-        @media screen and (max-width: 490px) {
+        @media screen and (max-width: 530px) {
           font-size: 1.5rem;
         }
 
@@ -153,7 +157,11 @@ main {
         font-family: $font-1;
         line-height: 30px;
         font-style: italic;
-
+        
+        @media screen and (max-width: 900px) {
+          padding-left: 30px;
+          padding-right: 30px;
+        }
         @media screen and (max-width: 750px) {
           font-size: 0.9rem;
         }
@@ -191,6 +199,7 @@ main {
         font-weight: 700;
         letter-spacing: 2px;
         cursor: pointer;
+        transition: 0.4s;
 
         &:hover {
           border: 1px solid skyblue;
@@ -291,6 +300,7 @@ main {
           font-weight: 700;
           letter-spacing: 2px;
           cursor: pointer;
+          transition: 0.4s;
 
           &:hover {
             border: 1px solid skyblue;
@@ -386,6 +396,7 @@ main {
           font-weight: 700;
           letter-spacing: 2px;
           cursor: pointer;
+          transition: 0.4s;
 
           &:hover {
             border: 1px solid skyblue;
