--- a/style.css
+++ b/style.css
@@ -80,7 +80,7 @@ header {
 
 @media screen and (max-width: 890px) {
   header {
-    margin-top: 50px;
+    padding-top: 120px;
     min-height: 30vh;
   }
 }
@@ -355,13 +355,20 @@ main .section-1 .top-section-1 h2 {
   padding-bottom: 30px;
 }
 
-@media screen and (max-width: 710px) {
+@media screen and (max-width: 900px) {
   main .section-1 .top-section-1 h2 {
-    font-size: 2rem;
+    padding-left: 30px;
+    padding-right: 30px;
   }
 }
 
-@media screen and (max-width: 490px) {
+@media screen and (max-width: 820px) {
+  main .section-1 .top-section-1 h2 {
+    font-size: 3rem;
+  }
+}
+
+@media screen and (max-width: 530px) {
   main .section-1 .top-section-1 h2 {
     font-size: 1.5rem;
   }
@@ -377,6 +384,13 @@ main .section-1 .top-section-1 p {
   font-family: "font-1", sans-serif;
   line-height: 30px;
   font-style: italic;
+}
+
+@media screen and (max-width: 900px) {
+  main .section-1 .top-section-1 p {
+    padding-left: 30px;
+    padding-right: 30px;
+  }
 }
 
 @media screen and (max-width: 750px) {
@@ -426,6 +440,8 @@ main .section-1 .top-section-1 .btn-1 {
   font-weight: 700;
   letter-spacing: 2px;
   cursor: pointer;
+  -webkit-transition: 0.4s;
+  transition: 0.4s;
 }
 
 main .section-1 .top-section-1 .btn-1:hover {
@@ -558,6 +574,8 @@ main .section-1 .bot-section-1 .bl-section-1 .btn-1 {
   font-weight: 700;
   letter-spacing: 2px;
   cursor: pointer;
+  -webkit-transition: 0.4s;
+  transition: 0.4s;
 }
 
 main .section-1 .bot-section-1 .bl-section-1 .btn-1:hover {
@@ -679,6 +697,8 @@ main .section-1 .bot-section-1 .br-section-1 .btn-1 {
   font-weight: 700;
   letter-spacing: 2px;
   cursor: pointer;
+  -webkit-transition: 0.4s;
+  transition: 0.4s;
 }
 
 main .section-1 .bot-section-1 .br-section-1 .btn-1:hover {
@@ -756,6 +776,8 @@ footer form .submit-container input[type="submit"] {
   text-transform: uppercase;
   cursor: pointer;
   font-family: "$font-1";
+  -webkit-transition: 0.4s;
+  transition: 0.4s;
 }
 
 footer form .submit-container input[type="submit"]:hover {
@@ -785,6 +807,7 @@ footer .infos-contact div {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  text-align: left;
 }
 
 footer .infos-contact div h3 {
@@ -808,13 +831,19 @@ footer .infos-contact div p {
   font-family: "$font-1";
 }
 
+@media screen and (max-width: 890px) {
+  footer .infos-contact div p {
+    margin-bottom: 8px;
+  }
+}
+
 footer .infos-contact .social ul {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
 }
 
 footer .infos-contact .social ul li {
